# solana-ekza-space

./: .gitignore  Anchor.toml  README.md  package.json  tsconfig.sdk.json
programs/ekza-space/: Cargo.toml
programs/ekza-space/src/: constants.rs  error.rs  events.rs  lib.rs  state.rs
programs/ekza-space/src/instructions/: init_config.rs  mint_next_space.rs  mod.rs  update_config.rs  update_space_settings.rs
programs/solana-ekza-space/: Cargo.toml
programs/solana-ekza-space/src/: lib.rs
sdk/: ekzaSpaceClient.ts  index.ts
tests/: ekza-space.ts  solana-ekza-space.ts
